Add client test scenarios: 3 test providers, CPT code 00215, and demo buttons
- Added PRV73001 (Dr Michael Tan) - Risky provider for fraud test
- Added PRV74001 (Dr Michael Chen) - Clean provider for normal test
- Added PRV76001 (Dr Leonid Sten) - Dental provider for edge case
- Added CPT code 00215 (Office visit Level 2-3)
- Added 3 CLIENT TEST scenario buttons in demo.html
- Updated provider/CPT dropdowns in index.html and demo.html
- Created CLIENT_TEST_SCENARIOS.md documentation

--- a/Static/index.html
+++ b/Static/index.html
@@ -86,11 +86,15 @@
                         <option value="PRV01000">PRV01000 - Dr. Smith (Cardiology)</option>
                         <option value="PRV01001">PRV01001 - Dr. Johnson (Orthopedics) ⚠️</option>
                         <option value="PRV01002">PRV01002 - Dr. Williams (General Practice)</option>
+                        <option value="PRV73001">PRV73001 - Dr Michael Tan (Specialist Physician) ⚠️🔴</option>
+                        <option value="PRV74001">PRV74001 - Dr Michael Chen (General Practitioner)</option>
+                        <option value="PRV76001">PRV76001 - Dr Leonid Sten (Dental Surgeon)</option>
                     </select>
                 </div>
                 <div class="form-group">
                     <label>CPT Code</label>
                     <select id="cptCode">
+                        <option value="00215">00215 - Office visit, level 2-3 ($150-$250)</option>
                         <option value="99213">99213 - Office visit, level 3 ($120)</option>
                         <option value="99214">99214 - Office visit, level 4 ($180)</option>
                         <option value="99215">99215 - Office visit, level 5 ($250)</option>
