Standardize UI: rename test scenarios to match existing format, clean up provider names, use consistent emoji and badges

--- a/Static/index.html
+++ b/Static/index.html
@@ -86,9 +86,9 @@
                         <option value="PRV01000">PRV01000 - Dr. Smith (Cardiology)</option>
                         <option value="PRV01001">PRV01001 - Dr. Johnson (Orthopedics) ⚠️</option>
                         <option value="PRV01002">PRV01002 - Dr. Williams (General Practice)</option>
-                        <option value="PRV73001">PRV73001 - Dr Michael Tan (Specialist Physician) ⚠️🔴</option>
-                        <option value="PRV74001">PRV74001 - Dr Michael Chen (General Practitioner)</option>
-                        <option value="PRV76001">PRV76001 - Dr Leonid Sten (Dental Surgeon)</option>
+                        <option value="PRV73001">PRV73001 - Dr. Michael Tan (Specialist) ⚠️</option>
+                        <option value="PRV74001">PRV74001 - Dr. Michael Chen (General Practice)</option>
+                        <option value="PRV76001">PRV76001 - Dr. Leonid Sten (Dental Surgeon)</option>
                     </select>
                 </div>
                 <div class="form-group">
